feat: GPX cache, meeting point, fix dur or dist, end date